--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <dependency>
             <groupId>ch.vorburger.mariaDB4j</groupId>
             <artifactId>mariaDB4j</artifactId>
-            <version>2.2.0-SNAPSHOT</version>
+            <version>LATEST</version>
         </dependency>
     </dependencies>
     <build>
