--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>nl.lakedigital.djfc</groupId>
     <artifactId>djfc-commons</artifactId>
-    <version>5.31</version>
+    <version>5.32</version>
+
+    <properties>
+        <spring-framework.version>4.2.5.RELEASE</spring-framework.version>
+    </properties>
 
     <distributionManagement>
         <repository>
@@ -17,6 +21,16 @@
     </distributionManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring-framework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.xbean</groupId>
+            <artifactId>xbean-spring</artifactId>
+            <version>3.7</version>
+        </dependency>
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
