--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>nl.lakedigital.djfc</groupId>
     <artifactId>djfc-commons</artifactId>
-    <version>5.35</version>
+    <version>5.36-SNAPSHOT</version>
 
     <properties>
         <spring-framework.version>4.2.5.RELEASE</spring-framework.version>
